# dnsrecon-rs

./: Cargo.toml  README.md  build.ps1  build.sh
benches/: dns_benchmarks.rs
data/: namelist.txt  snoop.txt
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  progress.rs
src/dns/: error.rs  mod.rs  record.rs  resolver.rs  resolver.rs.backup  zone_transfer.rs
src/enumerate/: bing.rs  brute_force.rs  crt_sh.rs  mod.rs  whois.rs  yandex.rs
src/output/: json.rs  mod.rs  sqlite.rs  xml.rs
src/utils/: cidr.rs  http.rs  mod.rs  validation.rs
tests/: api_tests.rs  cli_proxy_tests.rs  cli_tests.rs  dns_helper_tests.rs  dns_record_tests.rs  dns_tests.rs  enumerate_tests.rs  http_utils_tests.rs  integration_proxy_tests.rs  integration_tests.rs  output_tests.rs
