[package]
name = "dnsrecon-rs"
version = "0.1.0"
edition = "2021"
description = "Rust Implementation of Tool Dnsrecon"
license = "GPL-2.0"

[dependencies]
trust-dns-resolver = "0.23"
trust-dns-client = "0.23"
ipnetwork = "0.20"
cidr-utils = "0.3"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
xml-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }  # 1.47.1
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
quick-xml = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
thiserror = "1.0"
rand = "0.8"
url = "2.5"
tokio-stream = "0.1"
futures-util = "0.3"
dunce = "1.0.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
criterion = "0.5"

[features]
default = []
bench = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
# incremental = false

[[bench]]
name = "dns_benchmarks"
harness = false
